# RobotMath2030

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  run_benchmarks.py
chapters/01_pose_is_not_vector/: README.md  concept.yaml  demo.py
chapters/02_tiny_lie_graph_optimizer/: README.md  concept.yaml  demo.py
chapters/03_retraction_vs_projection/: README.md  concept.yaml  demo.py
chapters/14_topology_tda/: README.md  (+2 more)
docs/: _nav_chapters.yaml  building.md  chapters.md  concept_index.yaml  index.md  landing.md  math_map.md  physical_ai_math_2030.md  references.md  roadmap.md
miniworlds/: __init__.py  gaussian_policy_world.py  grid_world.py  landmark_pose_world.py  loop_cloud_world.py  mass_spring_world.py  occupancy_map_world.py  point_cloud_3d_world.py  point_cloud_world.py  pose_graph_world.py  rmp_world.py  two_path_world.py
notebooks/: 01_geometry_of_state.ipynb  05_sinkhorn_optimal_transport.ipynb  07_diffusion_policy.ipynb  08_flow_matching.ipynb  10_world_model.ipynb  13_neural_operators.ipynb  README.md
robotmath/: __init__.py
scripts/: render_all_gifs.py  smoke_all_chapters.py  sync_chapter_docs.py
tests/: test_differentiable_physics.py  test_diffusion_policy.py  test_factor_graph.py  test_flow_matching.py  test_fno.py  test_lie.py  test_manifold_update.py  test_natural_gradient.py  test_neural_operators.py  test_rmp_2d.py  test_se3_equivariant.py  test_sinkhorn.py  test_topology_tda.py  test_wasserstein_map.py  test_world_model.py
(+83 files in other folders)
