[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotmath2030"
version = "0.2.2"
description = "Executable visual guide to mathematics for future robotics and Physical AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "RobotMath2030 Contributors" }]
keywords = [
    "robotics",
    "physical-ai",
    "lie-groups",
    "slam",
    "world-models",
    "optimal-transport",
    "diffusion-policy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
torch = [
    "torch>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pyyaml>=6",
]
all = [
    "robotmath2030[dev,torch,docs]",
]

[project.urls]
Homepage = "https://github.com/rsasaki0109/RobotMath2030"
Documentation = "https://rsasaki0109.github.io/RobotMath2030/"

[tool.setuptools.packages.find]
where = ["."]
include = ["robotmath*", "miniworlds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
